--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>motoDrive</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <footer>
+        <p class="footer_text">Free Delivery: Take advantage of our time to save event.</p>
+        <ul>
+            <li><a href=""><img src="/svg/icon_user.svg" alt="Profile"></a></li>
+            <li><a href=""><img src="/svg/icon_search.svg" alt="Search"></a></li>
+            <li><a href=""><img src="/svg/icon_shop.svg" alt="Shop"></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
