create main & footer

--- a/index.html
+++ b/index.html
@@ -6,16 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>motoDrive</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <footer>
-        <p class="footer_text">Free Delivery: Take advantage of our time to save event.</p>
-        <ul>
-            <li><a href=""><img src="/svg/icon_user.svg" alt="Profile"></a></li>
-            <li><a href=""><img src="/svg/icon_search.svg" alt="Search"></a></li>
-            <li><a href=""><img src="/svg/icon_shop.svg" alt="Shop"></a></li>
-        </ul>
-    </footer>
+    <header>
+        <p class="header_text">Free Delivery: Take advantage of our time to save event.</p>
+        <div class="list">
+            <a href="#">
+                <img src="/svg/icon_shop.svg" alt="User">
+            </a>
+            <a href="#">
+                <img src="/svg/icon_search.svg" alt="Search">
+            </a>
+            <a href="#">
+                <img src="/svg/icon_user.svg" alt="Shop">
+            </a>
+        </div>
+    </header>
+    <div class="main">
+        <div class="main__header">
+            <div class="main__logo">
+                <img src="/svg/wheels.svg" alt="wheels">
+            </div>
+            <nav class="main__nav">
+                <a href="#" class="active">HOME</a>
+                <a href="#">ABOUT US</a>
+                <a href="#">SHOP</a>
+                <a href="#">BLOG</a>
+                <a href="#">CONTACT</a>
+            </nav>
+            <button class="main__shopping">
+                    SHOPPING NOW
+            </button>
+        </div>
+        <div class="main__center">
+            <div class="main__slogan">
+                    safe and cool
+                    motorcyclist
+            </div>
+            <div class="main__slider">
+                <p class="active"></p>
+                <p></p>
+            </div>
+        </div>
+        <div class="main__discover">
+            <button>
+                    DISCOVER NOW
+            </button>
+        </div>
+    </div>
+
 </body>
 </html>
