--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <p class="header_text">Free Delivery: Take advantage of our time to save event.</p>
         <div class="list">
             <a href="#">
-                <img src="/svg/icon_shop.svg" alt="User">
+                <img src="svg/icon_shop.svg" alt="User">
             </a>
             <a href="#">
-                <img src="/svg/icon_search.svg" alt="Search">
+                <img src="svg/icon_search.svg" alt="Search">
             </a>
             <a href="#">
-                <img src="/svg/icon_user.svg" alt="Shop">
+                <img src="svg/icon_user.svg" alt="Shop">
             </a>
         </div>
     </header>
     <div class="main">
         <div class="main__header">
             <div class="main__logo">
-                <img src="/svg/wheels.svg" alt="wheels">
+                <img src="svg/wheels.svg" alt="wheels">
             </div>
             <nav class="main__nav">
                 <a href="#" class="active">HOME</a>
