--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </a>
         </div>
     </header>
+
     <div class="main">
         <div class="main__header">
             <div class="main__logo">
@@ -54,6 +55,30 @@
             </button>
         </div>
     </div>
+
+    <div class="four-jpegs">
+        <div class="four-jpegs__first-two">
+            <div class="bg-for_jpeg">
+                    <div class="four-jpegs__opacity-byke section-jpeg">
+                    </div>
+            </div>
+            <div class="bg-for_jpeg">
+                    <div class="four-jpegs__mirrow-byke section-jpeg">
+                    </div>
+            </div>
+        </div>
+        <div class="four-jpegs__last-two">
+            <div class="bg-for_jpeg">
+                    <div class="four-jpegs__wheel-byke section-jpeg">
+                    </div>
+            </div>
+            <div class="bg-for_jpeg">
+                    <div class="four-jpegs__full-byke section-jpeg">
+                    </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
