--- a/index.html
+++ b/index.html
@@ -56,28 +56,20 @@
         </div>
     </div>
 
-    <div class="four-jpegs">
-        <div class="four-jpegs__first-two">
-            <div class="bg-for_jpeg">
-                    <div class="four-jpegs__opacity-byke section-jpeg">
-                    </div>
-            </div>
-            <div class="bg-for_jpeg">
-                    <div class="four-jpegs__mirrow-byke section-jpeg">
-                    </div>
-            </div>
+<div class="bikes">
+    <div class="top-bikes">
+        <div class="bike-info">
+            <img src="img/opacity_byke.jpg" alt="Bike chain" class="chain">
+            <div class="info-content">
+                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+                </div>
         </div>
-        <div class="four-jpegs__last-two">
-            <div class="bg-for_jpeg">
-                    <div class="four-jpegs__wheel-byke section-jpeg">
-                    </div>
-            </div>
-            <div class="bg-for_jpeg">
-                    <div class="four-jpegs__full-byke section-jpeg">
-                    </div>
-            </div>
-        </div>
+
+
+
     </div>
+</div>
 
 </body>
 </html>
