create third block

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <img src="img/opacity_byke.jpg" alt="Bike chain">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
                 </div>
         </div>
         <div class="bike-info bike-info__min">
             <img src="img/bike-mirrow.jpg" alt="Bike mirrow">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
                 </div>
         </div>
     </div>
@@ -78,15 +78,49 @@
             <img src="img/bike-wheel.jpg" alt="Bike wheel">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
                 </div>
         </div>
         <div class="bike-info bike-info__last">
             <img src="img/black-bike.jpg" alt="Black bike">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
                 </div>
+        </div>
+    </div>
+</div>
+
+<div class="product">
+    <h2>OUR PRODUCT</h2>
+    <div class="menu">
+        <a href="">Helmet</a>
+        <a href="">Motorbike</a>
+        <a href="">Accessories</a>
+        <a href="">Sale</a>
+    </div>
+    <hr>
+    <div class="pdoduct__helmets">
+        <div class="helm">
+            <img src="png/helm-1.png" alt="">
+            <div class="helm__price">
+                    Sample Product For You
+                    <p>$200.00</p>
+            </div>
+        </div>
+        <div class="helm">
+            <img src="png/helm-2.png" alt="">
+            <div class="helm__price">
+                Sample Product For You
+                <p>$200.00</p>
+            </div>
+        </div>
+        <div class="helm">
+            <img src="png/helm-3.png" alt="">
+            <div class="helm__price">
+                Sample Product For You
+                <p>$200.00</p>
+            </div>
         </div>
     </div>
 </div>
