--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <img src="img/opacity_byke.jpg" alt="Bike chain">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
                 </div>
         </div>
         <div class="bike-info bike-info__min">
             <img src="img/bike-mirrow.jpg" alt="Bike mirrow">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
                 </div>
         </div>
     </div>
@@ -78,14 +78,14 @@
             <img src="img/bike-wheel.jpg" alt="Bike wheel">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
                 </div>
         </div>
         <div class="bike-info bike-info__last">
             <img src="img/black-bike.jpg" alt="Black bike">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><div>UP TO</div> 50% OFF</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
                 </div>
         </div>
     </div>
