мучался с изменением свойств для нижних байков, что бы изменить родительские свойства в css нужно указывать полный путь к нужному контейнеру со всеми вложенностями

--- a/index.html
+++ b/index.html
@@ -125,5 +125,24 @@
     </div>
 </div>
 
+<div class="footer-bikes bikes">
+    <div class="top-bikes">
+        <div class="bike-info bike-info__min">
+            <img src="img/speedometr.jpg" alt="Speedometr">
+            <div class="info-content">
+                <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+            </div>
+        </div>
+        <div class="bike-info">
+            <img src="img/sunset.jpg" alt="Bike mirrow">
+            <div class="info-content">
+                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
