сомневаюсь уже добьюсь ли чего-то в этом деле вообще

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
                     <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-                </div>
+            </div>
         </div>
         <div class="bike-info bike-info__min">
             <img src="img/bike-mirrow.jpg" alt="Bike mirrow">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
                     <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-                </div>
+            </div>
         </div>
     </div>
     <div class="top-bikes bottom-bikes">
@@ -79,14 +79,14 @@
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
                     <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-                </div>
+            </div>
         </div>
         <div class="bike-info bike-info__last">
             <img src="img/black-bike.jpg" alt="Black bike">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
                     <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -135,14 +135,24 @@
             </div>
         </div>
         <div class="bike-info">
-            <img src="img/sunset.jpg" alt="Bike mirrow">
+            <img src="img/sunset.jpg" alt="Sunset with bike">
             <div class="info-content">
                     <div class="info-title">THE FUEL ROYAL RALLY 400</div>
                     <div class="info-substring"><span>UP TO</span> 50% OFF</div>
             </div>
         </div>
     </div>
+    <div class="street-biker">
+        <img src="img/gay_on_bike.jpg" alt="">
+        <div class="info-content"></div>
+        <form action="">
+            <input type="text" value="Your email address" class="input-text">
+            <input type="submit" value="SUBMIT" class="input-submit">
+        </form>
+    </div>
 </div>
+
+
 <script src="script.js"></script>
 </body>
 </html>
