--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <div class="main">
+<div class="main">
         <div class="main__header">
             <div class="main__logo">
                 <img src="svg/wheels.svg" alt="wheels">
@@ -54,7 +54,7 @@
                     DISCOVER NOW
             </button>
         </div>
-    </div>
+</div>
 
 <div class="bikes">
     <div class="top-bikes">
@@ -142,13 +142,94 @@
             </div>
         </div>
     </div>
+    <div class="bike-wrapper">
     <div class="street-biker">
         <img src="img/gay_on_bike.jpg" alt="">
-        <div class="info-content"></div>
+        <div class="info-content">
+        </div>
+        <h1 class="price-content">SAVE UP TO 75%</h1>
         <form action="">
             <input type="text" value="Your email address" class="input-text">
             <input type="submit" value="SUBMIT" class="input-submit">
         </form>
+    </div>
+    </div>
+</div>
+
+<div class="conditions">
+    <div class="condition">
+        <img src="svg/deliver.svg" alt="Deliver">
+        <div class="codition__text">
+            Free Shipping Worldwide
+            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+        </div>
+    </div>
+    <div class="condition">
+        <img src="svg/pay.svg" alt="">
+        <div class="codition__text">
+            Money Back Guarantee 
+            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+        </div>
+    </div>
+    <div class="condition">
+        <img src="svg/call.svg" alt="">
+        <div class="codition__text">
+            Free Shipping Worldwide
+            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+        </div>
+    </div>
+</div>
+
+<div class="moto-jpegs">
+    <img src="img/moto-chain.jpg" alt="">
+    <img src="img/moto-boy.jpg" alt="">
+    <img src="img/moto-nose.jpg" alt="">
+</div>
+
+<div class="navigation">
+    <div class="about">
+        <h3>About us</h3>
+        <div class="about-text">The new hero pieces bring instant fashion credibility. Bright florals clash with camouflage.</div>
+        <h3 class="follow">Follow us</h3>
+        <div class="about-social">
+            <img src="png/fbuk.png" alt="">
+            <img src="png/insta.png" alt="">
+            <img src="png/in.png" alt="">
+            <img src="png/twit.png" alt="">
+        </div>
+    </div>
+    <div class="info">
+        <h3>Information</h3>
+        <ul>
+            <li><a href="">Profile</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Address</a></li>
+            <li><a href="">Return Policy</a></li>
+        </ul>
+    </div>
+    <div class="info">
+            <h3>Returns</h3>
+            <ul>
+                    <li><a href="">FAQs</a></li>
+                    <li><a href="">Size Guide</a></li>
+                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Sell with Us</a></li>
+                    <li><a href="">Sitemap</a></li>
+                </ul>
+    </div>
+    <div class="location">
+        <img src="svg/another_freaks.svg" alt="logo">
+        <div class="location__text">
+                Street addresses: 445 
+                Mount Eden Road, Mount 
+                Postcodes: 5022 
+        </div>
+        <div class="pays">
+            <img src="svg/visa.svg" alt="visa">
+            <img src="svg/Mastercard.svg" alt="Mastercard">
+            <img src="svg/ebay.svg" alt="ebay">
+        </div>
     </div>
 </div>
 
