--- a/index.html
+++ b/index.html
@@ -192,10 +192,11 @@
         <div class="about-text">The new hero pieces bring instant fashion credibility. Bright florals clash with camouflage.</div>
         <h3 class="follow">Follow us</h3>
         <div class="about-social">
-            <img src="png/fbuk.png" alt="">
-            <img src="png/insta.png" alt="">
-            <img src="png/in.png" alt="">
-            <img src="png/twit.png" alt="">
+
+            <div class="img-wrapper"><img src="png/fbuk.png" alt=""></div>
+            <div class="img-wrapper"><img src="png/insta.png" alt=""></div>
+            <div class="img-wrapper"><img src="png/in.png" alt=""></div>
+            <div class="img-wrapper"><img src="png/twit.png" alt=""></div>
         </div>
     </div>
     <div class="info">
@@ -219,7 +220,7 @@
                 </ul>
     </div>
     <div class="location">
-        <img src="svg/another_freaks.svg" alt="logo">
+        <img src="svg/another_freaks.svg" class="location__logo" alt="logo">
         <div class="location__text">
                 Street addresses: 445 
                 Mount Eden Road, Mount 
@@ -233,7 +234,13 @@
     </div>
 </div>
 
+<hr class="cut">
 
+<footer>
+    <a href="">Status</a>
+    <a href="">Contact Us</a>
+    <a href="">Copyright © 2019, Template</a>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
