--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <h3 class="follow">Follow us</h3>
         <div class="about-social">
 
-            <div class="img-wrapper"><img src="png/fbuk.png" alt=""></div>
-            <div class="img-wrapper"><img src="png/insta.png" alt=""></div>
-            <div class="img-wrapper"><img src="png/in.png" alt=""></div>
-            <div class="img-wrapper"><img src="png/twit.png" alt=""></div>
+            <a href="#"><div class="img-wrapper"><img src="png/fbuk.png" alt=""></div></a>
+            <a href="#"><div class="img-wrapper"><img src="png/insta.png" alt=""></div></a>
+            <a href="#"><div class="img-wrapper"><img src="png/in.png" alt=""></div></a>
+            <a href="#"><div class="img-wrapper"><img src="png/twit.png" alt=""></div></a>
         </div>
     </div>
     <div class="info">
