--- a/index.html
+++ b/index.html
@@ -1,246 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>motoDrive</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body class="hide">
+    <div class="preloader">
+      <div class="preloader__content">
+        
+      </div>
+    </div>
+
     <header>
-        <p class="header_text">Free Delivery: Take advantage of our time to save event.</p>
-        <div class="list">
-            <a href="#">
-                <img src="svg/icon_shop.svg" alt="User">
-            </a>
-            <a href="#">
-                <img src="svg/icon_search.svg" alt="Search">
-            </a>
-            <a href="#">
-                <img src="svg/icon_user.svg" alt="Shop">
-            </a>
-        </div>
+      <p class="header_text">
+        Free Delivery: Take advantage of our time to save event.
+      </p>
+      <div class="list">
+        <a href="#">
+          <img src="svg/icon_shop.svg" alt="User" />
+        </a>
+        <a href="#">
+          <img src="svg/icon_search.svg" alt="Search" />
+        </a>
+        <a href="#">
+          <img src="svg/icon_user.svg" alt="Shop" />
+        </a>
+      </div>
     </header>
 
-<div class="main">
-        <div class="main__header">
-            <div class="main__logo">
-                <img src="svg/wheels.svg" alt="wheels">
-            </div>
-            <nav class="main__nav">
-                <a href="#" class="active">HOME</a>
-                <a href="#">ABOUT US</a>
-                <a href="#">SHOP</a>
-                <a href="#">BLOG</a>
-                <a href="#">CONTACT</a>
-            </nav>
-            <button class="main__shopping">
-                    SHOPPING NOW
-            </button>
+    <div class="main">
+      <div class="main__header">
+        <div class="main__logo">
+          <img src="svg/wheels.svg" alt="wheels" />
         </div>
-        <div class="main__center">
-            <div class="main__slogan">
-                    safe and cool
-                    motorcyclist
-            </div>
-            <div class="main__slider">
-                <p class="active"></p>
-                <p></p>
-            </div>
+        <nav class="main__nav">
+          <a href="#" class="active">HOME</a>
+          <a href="#">ABOUT US</a>
+          <a href="#">SHOP</a>
+          <a href="#">BLOG</a>
+          <a href="#">CONTACT</a>
+        </nav>
+        <button class="main__shopping">
+          SHOPPING NOW
+        </button>
+      </div>
+      <div class="main__center">
+        <div class="main__slogan">
+          safe and cool motorcyclist
         </div>
-        <div class="main__discover">
-            <button>
-                    DISCOVER NOW
-            </button>
+        <div class="main__slider">
+          <p class="active"></p>
+          <p></p>
         </div>
-</div>
-
-<div class="bikes">
-    <div class="top-bikes">
-        <div class="bike-info">
-            <img src="img/opacity_byke.jpg" alt="Bike chain">
-            <div class="info-content">
-                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
-        </div>
-        <div class="bike-info bike-info__min">
-            <img src="img/bike-mirrow.jpg" alt="Bike mirrow">
-            <div class="info-content">
-                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
-        </div>
+      </div>
+      <div class="main__discover">
+        <button>
+          DISCOVER NOW
+        </button>
+      </div>
     </div>
-    <div class="top-bikes bottom-bikes">
+
+    <div class="bikes">
+      <div class="top-bikes">
+        <div class="bike-info">
+          <img src="img/opacity_byke.jpg" alt="Bike chain" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
+        </div>
         <div class="bike-info bike-info__min">
-            <img src="img/bike-wheel.jpg" alt="Bike wheel">
-            <div class="info-content">
-                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
+          <img src="img/bike-mirrow.jpg" alt="Bike mirrow" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
+        </div>
+      </div>
+      <div class="top-bikes bottom-bikes">
+        <div class="bike-info bike-info__min">
+          <img src="img/bike-wheel.jpg" alt="Bike wheel" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
         </div>
         <div class="bike-info bike-info__last">
-            <img src="img/black-bike.jpg" alt="Black bike">
-            <div class="info-content">
-                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
+          <img src="img/black-bike.jpg" alt="Black bike" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<div class="product">
-    <h2>OUR PRODUCT</h2>
-    <div class="menu">
+    <div class="product">
+      <h2>OUR PRODUCT</h2>
+      <div class="menu">
         <a href="">Helmet</a>
         <a href="">Motorbike</a>
         <a href="">Accessories</a>
         <a href="">Sale</a>
+      </div>
+      <hr />
+      <div class="pdoduct__helmets">
+        <div class="helm">
+          <img src="png/helm-1.png" alt="" />
+          <div class="helm__price">
+            Sample Product For You
+            <p>$200.00</p>
+          </div>
+        </div>
+        <div class="helm">
+          <img src="png/helm-2.png" alt="" />
+          <div class="helm__price">
+            Sample Product For You
+            <p>$200.00</p>
+          </div>
+        </div>
+        <div class="helm">
+          <img src="png/helm-3.png" alt="" />
+          <div class="helm__price">
+            Sample Product For You
+            <p>$200.00</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <hr>
-    <div class="pdoduct__helmets">
-        <div class="helm">
-            <img src="png/helm-1.png" alt="">
-            <div class="helm__price">
-                    Sample Product For You
-                    <p>$200.00</p>
-            </div>
-        </div>
-        <div class="helm">
-            <img src="png/helm-2.png" alt="">
-            <div class="helm__price">
-                Sample Product For You
-                <p>$200.00</p>
-            </div>
-        </div>
-        <div class="helm">
-            <img src="png/helm-3.png" alt="">
-            <div class="helm__price">
-                Sample Product For You
-                <p>$200.00</p>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="footer-bikes bikes">
-    <div class="top-bikes">
+    <div class="footer-bikes bikes">
+      <div class="top-bikes">
         <div class="bike-info bike-info__min">
-            <img src="img/speedometr.jpg" alt="Speedometr">
-            <div class="info-content">
-                <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
+          <img src="img/speedometr.jpg" alt="Speedometr" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
         </div>
         <div class="bike-info">
-            <img src="img/sunset.jpg" alt="Sunset with bike">
-            <div class="info-content">
-                    <div class="info-title">THE FUEL ROYAL RALLY 400</div>
-                    <div class="info-substring"><span>UP TO</span> 50% OFF</div>
-            </div>
+          <img src="img/sunset.jpg" alt="Sunset with bike" />
+          <div class="info-content">
+            <div class="info-title">THE FUEL ROYAL RALLY 400</div>
+            <div class="info-substring"><span>UP TO</span> 50% OFF</div>
+          </div>
         </div>
-    </div>
-    <div class="bike-wrapper">
-    <div class="street-biker">
-        <img src="img/gay_on_bike.jpg" alt="">
-        <div class="info-content">
+      </div>
+      <div class="bike-wrapper">
+        <div class="street-biker">
+          <img src="img/gay_on_bike.jpg" alt="" />
+          <div class="info-content"></div>
+          <h1 class="price-content">SAVE UP TO 75%</h1>
+          <form action="">
+            <input type="text" value="Your email address" class="input-text" />
+            <input type="submit" value="SUBMIT" class="input-submit" />
+          </form>
         </div>
-        <h1 class="price-content">SAVE UP TO 75%</h1>
-        <form action="">
-            <input type="text" value="Your email address" class="input-text">
-            <input type="submit" value="SUBMIT" class="input-submit">
-        </form>
+      </div>
     </div>
-    </div>
-</div>
 
-<div class="conditions">
-    <div class="condition">
-        <img src="svg/deliver.svg" alt="Deliver">
+    <div class="conditions">
+      <div class="condition">
+        <img src="svg/deliver.svg" alt="Deliver" />
         <div class="codition__text">
-            Free Shipping Worldwide
-            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+          Free Shipping Worldwide
+          <div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </div>
         </div>
-    </div>
-    <div class="condition">
-        <img src="svg/pay.svg" alt="">
+      </div>
+      <div class="condition">
+        <img src="svg/pay.svg" alt="" />
         <div class="codition__text">
-            Money Back Guarantee 
-            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+          Money Back Guarantee
+          <div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </div>
         </div>
-    </div>
-    <div class="condition">
-        <img src="svg/call.svg" alt="">
+      </div>
+      <div class="condition">
+        <img src="svg/call.svg" alt="" />
         <div class="codition__text">
-            Free Shipping Worldwide
-            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+          Free Shipping Worldwide
+          <div>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<div class="moto-jpegs">
-    <img src="img/moto-chain.jpg" alt="">
-    <img src="img/moto-boy.jpg" alt="">
-    <img src="img/moto-nose.jpg" alt="">
-</div>
+    <div class="moto-jpegs">
+      <img src="img/moto-chain.jpg" alt="" />
+      <img src="img/moto-boy.jpg" alt="" />
+      <img src="img/moto-nose.jpg" alt="" />
+    </div>
 
-<div class="navigation">
-    <div class="about">
+    <div class="navigation">
+      <div class="about">
         <h3>About us</h3>
-        <div class="about-text">The new hero pieces bring instant fashion credibility. Bright florals clash with camouflage.</div>
+        <div class="about-text">
+          The new hero pieces bring instant fashion credibility. Bright florals
+          clash with camouflage.
+        </div>
         <h3 class="follow">Follow us</h3>
         <div class="about-social">
-
-            <a href="#"><div class="img-wrapper"><img src="png/fbuk.png" alt=""></div></a>
-            <a href="#"><div class="img-wrapper"><img src="png/insta.png" alt=""></div></a>
-            <a href="#"><div class="img-wrapper"><img src="png/in.png" alt=""></div></a>
-            <a href="#"><div class="img-wrapper"><img src="png/twit.png" alt=""></div></a>
+          <a href="#">
+            <div class="img-wrapper"><img src="png/fbuk.png" alt="" /></div>
+          </a>
+          <a href="#">
+            <div class="img-wrapper"><img src="png/insta.png" alt="" /></div>
+          </a>
+          <a href="#">
+            <div class="img-wrapper"><img src="png/in.png" alt="" /></div>
+          </a>
+          <a href="#">
+            <div class="img-wrapper"><img src="png/twit.png" alt="" /></div>
+          </a>
         </div>
-    </div>
-    <div class="info">
+      </div>
+      <div class="info">
         <h3>Information</h3>
         <ul>
-            <li><a href="">Profile</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Address</a></li>
-            <li><a href="">Return Policy</a></li>
+          <li><a href="">Profile</a></li>
+          <li><a href="">About us</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Address</a></li>
+          <li><a href="">Return Policy</a></li>
         </ul>
-    </div>
-    <div class="info">
-            <h3>Returns</h3>
-            <ul>
-                    <li><a href="">FAQs</a></li>
-                    <li><a href="">Size Guide</a></li>
-                    <li><a href="">Contact us</a></li>
-                    <li><a href="">Sell with Us</a></li>
-                    <li><a href="">Sitemap</a></li>
-                </ul>
-    </div>
-    <div class="location">
-        <img src="svg/another_freaks.svg" class="location__logo" alt="logo">
+      </div>
+      <div class="info">
+        <h3>Returns</h3>
+        <ul>
+          <li><a href="">FAQs</a></li>
+          <li><a href="">Size Guide</a></li>
+          <li><a href="">Contact us</a></li>
+          <li><a href="">Sell with Us</a></li>
+          <li><a href="">Sitemap</a></li>
+        </ul>
+      </div>
+      <div class="location">
+        <img src="svg/another_freaks.svg" class="location__logo" alt="logo" />
         <div class="location__text">
-                Street addresses: 445 
-                Mount Eden Road, Mount 
-                Postcodes: 5022 
+          Street addresses: 445 Mount Eden Road, Mount Postcodes: 5022
         </div>
         <div class="pays">
-            <img src="svg/visa.svg" alt="visa">
-            <img src="svg/Mastercard.svg" alt="Mastercard">
-            <img src="svg/ebay.svg" alt="ebay">
+          <img src="svg/visa.svg" alt="visa" />
+          <img src="svg/Mastercard.svg" alt="Mastercard" />
+          <img src="svg/ebay.svg" alt="ebay" />
         </div>
+      </div>
     </div>
-</div>
 
-<hr class="cut">
+    <hr class="cut" />
 
-<footer>
-    <a href="">Status</a>
-    <a href="">Contact Us</a>
-    <a href="">Copyright © 2019, Template</a>
-</footer>
-<script src="script.js"></script>
-</body>
+    <footer>
+      <a href="">Status</a>
+      <a href="">Contact Us</a>
+      <a href="">Copyright © 2019, Template</a>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <script src="preloader.js"></script>
+  </body>
 </html>
