change native events to jquery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="hide">
     <div class="preloader">
       <div class="preloader__content">
-        
+
       </div>
     </div>
 
@@ -267,7 +267,6 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="main.js"></script>
-    <script src="preloader.js"></script>
+    <script src="main-query.js"></script>
   </body>
 </html>
